# byyl_course_design

./: CMakeLists.txt  README.md  grammar_process.txt  request.md  semantic_process.txt  semantic_tree.txt
app/: main.cpp  mainwindow.cpp  mainwindow.h
app/components/ExportGraphButton/: ExportGraphButton.cpp  ExportGraphButton.h
app/components/ImagePreviewDialog/: ImagePreviewDialog.cpp  ImagePreviewDialog.h
app/components/SettingsDialog/: SettingsDialog.cpp  SettingsDialog.h
app/components/ToastManager/: ToastManager.cpp  ToastManager.h
app/components/ToastWidget/: ToastWidget.cpp  ToastWidget.h
app/controllers/AutomataController/: AutomataController.cpp  AutomataController.h
app/controllers/CodeViewController/: CodeViewController.cpp  CodeViewController.h
app/controllers/GeneratorController/: GeneratorController.cpp  GeneratorController.h
app/controllers/RegexController/: RegexController.cpp  RegexController.h
app/controllers/SettingsController/: SettingsController.cpp  SettingsController.h
app/controllers/SyntaxController/: LR1Controller.cpp  LR1Controller.h  SyntaxController.cpp  SyntaxController.h
app/controllers/TestValidationController/: TestValidationController.cpp  TestValidationController.h
app/experiments/exp1/helpers/: AutomataTableHelper.cpp  AutomataTableHelper.h
app/experiments/exp1/tabs/automata/: DFAViewTab.cpp  DFAViewTab.h  MinDFAViewTab.cpp  MinDFAViewTab.h  NFAViewTab.cpp  NFAViewTab.h
app/experiments/exp1/tabs/code/: CodeViewTab.cpp  CodeViewTab.h
app/experiments/exp1/tabs/regex/: RegexEditorTab.cpp  RegexEditorTab.h
app/experiments/exp1/tabs/test/: TestValidationTab.cpp  TestValidationTab.h
app/experiments/exp2/dialogs/: GrammarProcessDialog.cpp  LALR1ActionTableDialog.cpp  LALR1ActionTableDialog.h  LALR1TableDialog.cpp  LALR1TableDialog.h  LR0TableDialog.cpp  LR0TableDialog.h  LR1ActionTableDialog.cpp  LR1ActionTableDialog.h  LR1TableDialog.cpp  LR1TableDialog.h  SLRCheckDialog.cpp  SLRCheckDialog.h
app/experiments/exp2/helpers/: SyntaxTableHelper.cpp  SyntaxTableHelper.h
app/experiments/exp2/tabs/grammar/: FirstFollowTab.cpp  FirstFollowTab.h  GrammarEditorTab.cpp  GrammarEditorTab.h
app/experiments/exp2/tabs/lr/: LRTab.cpp  LRTab.h
app/experiments/exp2/tabs/syntax/: LR1ProcessTab.cpp  LR1ProcessTab.h  LR1TreeTab.cpp  LR1TreeTab.h  SyntaxCodeViewTab.cpp  SyntaxCodeViewTab.h  SyntaxTreeTab.cpp  SyntaxTreeTab.h
app/pages/exp1/: Exp1Page.cpp  Exp1Page.h
app/pages/exp2/: Exp2Page.cpp  Exp2Page.h
app/pages/home/: HomePage.cpp  HomePage.h
app/services/DotService/: DotService.cpp  DotService.h
app/services/FileService/: FileService.cpp  FileService.h
app/services/NotificationService/: NotificationService.cpp  NotificationService.h
docs/: COMMENTING_GUIDE.md
src/: Engine.cpp  Engine.h
src/automata/: Hopcroft.cpp  Hopcroft.h  SubsetConstruction.cpp  SubsetConstruction.h  Thompson.cpp  Thompson.h
src/config/: Config.cpp  Config.h
src/generator/: CodeGenerator.cpp  CodeGenerator.h  SyntaxCodeGenerator.cpp  SyntaxCodeGenerator.h
src/model/: Alphabet.h  Automata.h
src/regex/: RegexLexer.cpp  RegexLexer.h  RegexParser.cpp  RegexParser.h  TokenHeaderParser.cpp  TokenHeaderParser.h
src/syntax/: AST.h  DotGenerator.cpp  DotGenerator.h  Grammar.cpp  Grammar.h  GrammarParser.cpp  GrammarParser.h  LALR1.cpp  LALR1.h  LL1.cpp  LL1.h  LR0.cpp  LR0.h  LR1.cpp  LR1.h  LR1Parser.cpp  LR1Parser.h  SLR.cpp  SLR.h  SyntaxParser.cpp  SyntaxParser.h  TokenMapBuilder.cpp  TokenMapBuilder.h
src/visual/: DotExporter.cpp  DotExporter.h
test_data/regex/: minic.txt
test_data/sample/: minic.txt  tiny.txt
test_data/semantic/: tiny.txt
tests/: TestRunner.cpp  测试结果.txt  测试说明文档.md
tests/automata/: fa_core_test.cpp
tests/cli/: cli_regex_test.cpp  cli_regex_test.h
tests/codegen/: codegen_compile_run_test.cpp  codegen_compile_run_test.h
tests/common/: EnvGuard.h  TestIO.h
tests/exp1/: task1_regex_input.cpp  task2_regex_operators.cpp  task4_nfa.cpp  task5_dfa.cpp  task6_mindfa.cpp  task7_code_gen.cpp  task8_compile_run.cpp  task9_tiny_test.cpp
tests/exp2/: task1_bnf_input.cpp  task2_first_follow.cpp  task3_lr1_dfa.cpp  task4_lalr1_dfa.cpp  task5_lalr1_table.cpp  task6_syntax_process.cpp  task7_syntax_tree.cpp  task8_tiny_full.cpp
tests/exp3/: task1_minic_lexer.cpp  task2_minic_parser.cpp
tests/lexer/: longest_match_test.cpp
tests/syntax/: grammar_parser_test.cpp  ll1_test.cpp  lr0_test.cpp  lr1_semantic_ast_build_test.cpp  lr1_test.cpp  semantic_actions_parse_test.cpp  slr_test.cpp  syntax_parser_test.cpp
tests/test_data/regex/: minic.regex  minic.txt  tiny.regex
tests/test_data/sample/: minic.txt
tests/test_data/semantic/: minic.txt  tiny.txt  语义动作说明.md
tests/test_data/syntax/: minic.txt  tiny.txt
tests/ui/: auto_test_ui.cpp
